@@ -21,64 +21,31 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-            <groupId>com.github.ansell.pellet</groupId>
-            <artifactId>pellet-query</artifactId>
-            <version>2.3.6-ansell</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.github.ansell.pellet</groupId>
-                    <artifactId>pellet-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-log4j12</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-<!-- https://mvnrepository.com/artifact/com.github.ansell.pellet/pellet-owlapiv3 -->
-		<dependency>
-    		<groupId>com.github.ansell.pellet</groupId>
-    		<artifactId>pellet-owlapiv3</artifactId>
-    		<version>2.3.6-ansell</version>
-		</dependency>
-		
-        <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr-runtime</artifactId>
-            <version>3.2</version>
-        </dependency>
- <!--       <dependency>
-            <groupId>aterm</groupId>
-            <artifactId>aterm</artifactId>
-            <version>1.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.relaxng</groupId>
-            <artifactId>relaxngDatatype</artifactId>
-            <version>2011.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jgrapht</groupId>
-            <artifactId>jgrapht-jdk1.5</artifactId>
-            <version>0.7.3</version>
-        </dependency>-->
+	      <!-- OWLAPI dependency -->
+      <dependency>
+         <groupId>net.sourceforge.owlapi</groupId>
+         <artifactId>owlapi-distribution</artifactId>
+         <version>4.5.20</version>
+      </dependency>
 
-        <dependency>
-            <groupId>net.sourceforge.owlapi</groupId>
-            <artifactId>owlapi-distribution</artifactId>
-            <version>4.5.20</version>
-        </dependency>
+      <dependency>
+      	<groupId>cz.muni.ics.makub</groupId>
+      	<artifactId>owltutorial</artifactId>
+      	<version>1.3.0</version>
+      </dependency>
+      
+      <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.15.0-rc1</version>
+</dependency>
+
+      
 	</dependencies>
 
 	<build>
@@ -86,6 +53,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				         <configuration>
+            <jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
+         </configuration>
 			</plugin>
 		</plugins>
 	</build>
